--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									<h2 >Converted samples</h2>
 								</header>
 								<p style="font-size: 30px; font-weight: bold">Seen to Seen Conversion</p>
-								<p style="font-size: 25px;">*Note: The demo of Main-VC can be found on <a href="https://main-vc24ijcnn.github.io/" target="_blank"> its page [(Table.1 Traditional Voice Conversion (seen speakers))]</a>.</p>
+								<p style="font-size: 25px;">*Note: The demo of Main-VC can be found on <a href="https://main-vc24ijcnn.github.io/" target="_blank"> its page [Table.1 Traditional Voice Conversion (seen speakers)]</a>.</p>
 								<table>
 									<tr>
 										<td style="vertical-align: middle; font-weight: bold"><center>Type</center>
